# MachineLearning

./: .env  .gitignore  checkpoint_cleanup.sh  count_code.ps1  main.py  paths.py  pipeline.py  pipeline_wizard.py  pylidc_compat.py  pyproject.toml  requirements.txt  terminal_ui.py
ClassificationModel/: __init__.py
ClassificationModel/constants/: __init__.py
ClassificationModel/constants/constants/: __init__.py  augmentation.py  dataset.py  model.py
ClassificationModel/constants/enums/: __init__.py  cancer_type.py  (+1 more)
ClassificationModel/src/: dataset_processing.py
ClassificationModel/testing/: __init__.py  classification_model_testing.ipynb  convert_keras_to_pt.py
DetectionModel/constants/: __init__.py
DetectionModel/src/: __init__.py
common/: __init__.py  base_cnn_model.py  base_model.py  class_weight_utils.py  notification_service.py
common/callbacks/: __init__.py  custom_progress_bar.py  notification_callback.py  rich_progress_bar.py
common/constants/: __init__.py  accelerator.py  activation_functions.py  api_constants.py  hyperparameters.py  loss_functions.py  metrics.py  model_stages.py  notification.py  status_codes.py
common/dto/: __init__.py  bbox.py  cancer_class.py  nodule.py  pipeline.py
common/layers/: __init__.py  conv2d_block.py  dense_block.py
common/mixins/: __init__.py  dataclass_mixin.py  enum_mixin.py  model_mixin.py
constants/: __init__.py  base_model_constants.py  notification_fields.py
constants/classification/: __init__.py  augmentation_constants.py  datasets_constants.py  model_constants.py
constants/common/: __init__.py  metrics_constants.py  model_stages.py
constants/detection/: __init__.py  bbox_enum.py  centorid_enum.py  dataset_constants.py  features_enum.py  model_constants.py  preprocessing_constants.py  transforms_values.py  volume_enum.py
machinelearning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
middleware/: eureka_config.py  gateway_auth.py  middleware_config.py
utils/: __init__.py  base_cnn_model.py  base_model.py  base_pt_cnn_model.py  class_weight_utils.py  model_utils.py  notification_service.py
utils/callbacks/: __init__.py  notification_callback.py
utils/pt_layers/: Conv2D_block.py  DenseBlock.py
(+88 files in other folders)
